Compiles and works.

--- a/Allocator.vcxproj.filters
+++ b/Allocator.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="allocator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Allocator.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
