--- a/Allocator.vcxproj
+++ b/Allocator.vcxproj
@@ -144,6 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="allocator.h" />
+    <ClInclude Include="Allocator.hpp" />
     <ClInclude Include="heap.h" />
     <ClInclude Include="obj_traits.h" />
   </ItemGroup>
